# eco-kasa

./: .gitignore  README.md  pyproject.toml
docs/: smart-plug-setup.md
eco_kasa/: main.py
rpi_kasa_power/: main.py
tests/: test_rpi_kasa_power.py
